# obsidian-to-txt

./: .gitignore  LICENSE  README.md  pyproject.toml
src/obsidian_to_txt/: __init__.py  models.py  settings_store.py  vault_to_text_exporter.py
src/obsidian_to_txt/cli/: export.py  reset.py  setup.py
src/obsidian_to_txt/ui/: prompts.py  rich.py
